# Mosaic

./: .dockerignore  .gitignore  Cargo.toml  README.md
ai-search/: Cargo.toml  README.md
ai-search/ressources/: traversal_prompt.md
ai-search/src/: automatic_search.rs  full_ai_search.rs  main.rs
api/: Cargo.toml  build.rs  schema.graphql
api/src/: context.rs  lib.rs  main.rs  query_mapping.rs
api/src/schema/: account.rs  account_filter.rs  attribute_filter.rs  entity.rs  entity_filter.rs  entity_order_by.rs  entity_version.rs  mod.rs  options.rs  property.rs  query.rs  relation.rs  relation_filter.rs  schema_type.rs  space.rs  space_filter.rs  triple.rs  triple_filter.rs  value_type.rs
cache/: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
codegen/: Cargo.toml
codegen/src/: lib.rs  main.rs  sample.rs  utils.rs
grc20-core/: Cargo.toml  buf.gen.yaml
grc20-core/proto/: chain.proto  geo.proto  grc20.proto  substreams.yaml
grc20-core/src/: block.rs  error.rs  lib.rs  neo4j_utils.rs
grc20-core/src/aggregation/: aggregation_direction.rs  error.rs  mod.rs  pluralism.rs
grc20-core/src/ids/: base58.rs  id.rs  indexer_ids.rs  mod.rs  system_ids.rs  system_ids_base58.rs
grc20-core/src/mapping/: aggregation.rs  attribute_node.rs  attributes.rs  entity.rs  entity_node.rs  entity_queries.rs  entity_version.rs  mod.rs  pluralism.rs  relation.rs  relation_edge.rs  relation_node.rs  relation_old.rs  relation_queries.rs  triple.rs  value.rs
grc20-core/src/mapping/entity/: delete_one.rs  exact_search.rs  find_many.rs  find_one.rs  find_path.rs  find_relation.rs  insert_one.rs  mod.rs  models.rs  prefiltered_semantic_search.rs  search.rs  search_from_restrictions.rs  search_with_traversals.rs  semantic_search.rs  update_many.rs  update_one.rs  utils.rs
grc20-core/src/mapping/property/: insert_many.rs  insert_one.rs  mod.rs  models.rs
grc20-core/src/pb/: chain.rs  geo.rs  grc20.rs  mod.rs
grc20-core/tests/: common.rs  find_many_entities.rs  find_many_relations.rs  find_one_entity.rs  find_one_value.rs  insert_one_relation.rs  lightweight_edges.rs  search_entity.rs  search_value.rs  update_one_entity.rs  update_one_relation.rs
grc20-macros/: Cargo.toml
grc20-macros/src/: entity.rs  lib.rs  relation.rs
grc20-macros/tests/: entity.rs
grc20-sdk/: Cargo.toml
grc20-sdk/examples/: space_hierarchy.rs  space_schema.rs
grc20-sdk/src/models/: account.rs  base_entity.rs  cursor.rs  edit.rs  editor.rs  member.rs  mod.rs  property.rs  proposal.rs  space.rs  vote.rs
kg-cli/: Cargo.toml  types.ts
kg-cli/src/: main.rs
kg-codegen/: Cargo.toml
kg-codegen/src/: lib.rs  main.rs  utils.rs
kg-node/: Cargo.toml  build.rs
kg-node/resources/: bootstrap.cypher  dump.yaml
kg-node/src/: bootstrap.rs  system_ids.rs
kg-node/src/ipfs/: mod.rs
kg-node/src/kg/: client.rs  grc20.rs
kg-node/src/ops/: delete_triple.rs  ops.rs  set_triple.rs
mcp-server/: Cargo.toml
mcp-server/examples/: find_types.rs
mcp-server/resources/: get_entity_info_description.md  get_relations_between_entities_description.md  instructions.md  name_search_entity_description.md  search_entity_description.md  search_entity_using_ids_description.md  search_properties_description.md  search_relation_type_description.md  search_space_description.md  search_type_description.md
mcp-server/src/: error.rs  input_types.rs  lib.rs  main.rs
mcp-server/tests/: embedding_test.rs
node/: Cargo.toml
node/docker/: docker-compose.yaml
node/src/: bootstrap.rs  lib.rs  main.rs  neo4j_utils.rs  network_ids.rs  web3_utils.rs
node/src/bootstrap/: bootstrap_root.rs  bootstrap_templates.rs  constants.rs  mod.rs
node/src/events/: editor_added.rs  editor_removed.rs  handler.rs  member_added.rs  proposal_created.rs  proposal_executed.rs  proposal_processed.rs  space_created.rs  subspace_added.rs  subspace_removed.rs  vote_cast.rs
node/src/handler/: editor_added.rs  editor_removed.rs  handler.rs  initial_editors_added.rs  member_added.rs  member_removed.rs  mod.rs  proposal_created.rs  proposal_executed.rs  proposal_processed.rs  space_created.rs  subspace_added.rs  subspace_removed.rs  vote_cast.rs
node/src/kg/: client.rs  entity.rs  id.rs  mapping.rs  mod.rs
node/src/ops/: batch_set_triple.rs  conversions.rs  create_relation.rs  delete_triple.rs  mod.rs  op.rs  ops.rs  set_triple.rs
sdk/: Cargo.toml
sdk/proto/: geo.proto  ipfs.proto
sdk/src/: aggregations.rs  blocks.rs  conversion.rs  error.rs  lib.rs  mapping.rs  models.rs  neo4j_utils.rs  relation.rs
sdk/src/aggregation/: error.rs  mod.rs  schema_types.rs  space_hierarchy.rs
sdk/src/ids/: base58.rs  id.rs  indexer_ids.rs  mod.rs  system_ids.rs
sdk/src/mapping/: attribute_node.rs  attributes.rs  entity.rs  entity_filter.rs  entity_node.rs  entity_version.rs  error.rs  mod.rs  properties.rs  query.rs  relation.rs  relation_filter.rs  relation_node.rs  triple.rs  value.rs
sdk/src/mapping_old/: attributes.rs  entity.rs  mod.rs  relation.rs  triple.rs
sdk/src/models/: account.rs  base_entity.rs  block.rs  cursor.rs  edit.rs  editor.rs  member.rs  mod.rs  proposal.rs  space.rs  vote.rs
sdk/src/pb/: geo.rs  ipfs.rs  mod.rs  sf.ethereum.block_meta.v1.rs
sink/: Cargo.toml
sink/examples/: benchmark_large_edit.rs  benchmark_sample_range.rs  seed_data.rs
sink/src/: blacklist.rs  lib.rs  main.rs  metrics.rs  preprocess.rs  sink.rs  substreams_stream.rs
sink/src/bootstrap/: boostrap_indexer.rs  bootstrap_root.rs  bootstrap_templates.rs  constants.rs  mod.rs
sink/src/events/: edit_published.rs  editor_added.rs  editor_removed.rs  editors.rs  handler.rs  initial_editors_added.rs  member_added.rs  member_removed.rs  members.rs  mod.rs  proposal_created.rs  proposal_executed.rs  proposal_processed.rs  space_created.rs  subspace_added.rs  subspace_removed.rs  subspaces.rs  vote_cast.rs
sink/src/kg/: client.rs  entity.rs  mapping.rs  mod.rs
sink/src/ops/: conversions.rs  create_relation.rs  delete_triple.rs  op.rs  set_triple.rs
sink/tests/: space_created_tests.rs  subspace_tests.rs
sink/tests/common/: ipfs_mock.rs  mod.rs  neo4j.rs
(+136 files in other folders)
