[package]
name = "ai-search"
version = "0.1.0"
edition = "2024"

[dependencies]
axum= "0.8.4"
anyhow = "1.0.89"
clap = { version = "4.5.39", features = ["derive", "env"] }
fastembed = "4.8.0"
futures = "0.3.31"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

grc20-core = { version = "0.1.0", path = "../grc20-core" }
grc20-sdk = { version = "0.1.0", path = "../grc20-sdk" }

rand = "0.8"
regex = "1.10"
rig-core = "0.17.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
