[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
juniper = "0.16.1"
juniper_axum = "0.1.1"
juniper_graphql_ws = "0.4.0"
serde = "1.0.216"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

sdk = { version = "0.1.0", path = "../sdk" }
chrono = "0.4.39"

[dev-dependencies]
serde_path_to_error = "0.1.16"
