[package]
name = "kg-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
codegen = { version = "0.1.0", path = "../codegen" }
sdk = { version = "0.1.0", path = "../sdk" }
sink = { version = "0.1.0", path = "../sink" }
ipfs = { version = "0.1.0", path = "../ipfs" }

anyhow = "1.0.91"
clap = "4.5.20"
futures = "0.3.31"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
