[package]
name = "kg-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
futures = "0.3.31"
heck = "0.5.0"
swc = "3.0.0"
swc_common = "2.0.0"
swc_core = { version = "3.0.0", features = ["ecma_quote"] }
swc_ecma_ast = "2.0.0"
swc_ecma_codegen = "2.0.0"
swc_ecma_parser = { version = "3.0.0", features = ["typescript"] }
tracing = "0.1.40"

kg-core = { version = "0.1.0", path = "../core" }
indexer = { version = "0.1.0", path = "../indexer" }
