[package]
name = "grc20-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
grc20-core = { version = "0.1.0", path = "../grc20-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
web3-utils = { version = "0.1.0", path = "../web3-utils" }
