[package]
name = "kg-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = "4.5.20"
futures = "0.3.31"
kg-codegen = { version = "0.1.0", path = "../kg-codegen" }
kg-node = { version = "0.1.0", path = "../kg-node" }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
