[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.39", features = ["derive", "env"] }
fastembed = "4.8.0"
futures = "0.3.31"
grc20-core = { version = "0.1.0", path = "../grc20-core" }
grc20-sdk = { version = "0.1.0", path = "../grc20-sdk" }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-sse-server"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
