[package]
name = "kg-node"
version = "0.1.0"
edition = "2021"

[dependencies]
substreams-sink-rust = { version = "0.1.0", path = "../sink" }
kg-core = { version = "0.1.0", path = "../core" }
ipfs = { version = "0.1.0", path = "../ipfs" }
web3-utils = { version = "0.1.0", path = "../web3-utils" }

anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
heck = "0.5.0"
md-5 = "0.10.6"
neo4rs = "0.8.0"
prost = "0.13.3"
prost-types = "0.13.3"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.3"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
const_format = "0.2.33"

[dev-dependencies]
serde_path_to_error = "0.1.16"


