[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
md-5 = "0.10.6"
neo4rs = "0.8.0"
prost = "0.13.3"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
thiserror = "2.0.3"
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["v4"] }

web3-utils = { version = "0.1.0", path = "../web3-utils" }
