[package]
name = "sink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive", "env"] }
futures = "0.3.31"
heck = "0.5.0"
md-5 = "0.10.6"
prost = "0.13.3"
prost-types = "0.13.3"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.3"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
const_format = "0.2.33"
axum = "0.7.9"
prometheus = "0.13"
lazy_static = "1.4"

substreams-utils = { version = "0.1.0", path = "../substreams-utils" }
grc20-core = { version = "0.1.0", path = "../grc20-core" }
grc20-sdk = { version = "0.1.0", path = "../grc20-sdk" }
ipfs = { version = "0.1.0", path = "../ipfs" }
web3-utils = { version = "0.1.0", path = "../web3-utils" }
cache = { version = "0.1.0", path = "../cache" }
tracing-appender = "0.2.3"
serde_yaml = "0.9.34"
fastembed = "4.8.0"

[dev-dependencies]
serde_path_to_error = "0.1.16"
testcontainers = "0.23.3"
httpmock = "0.6"
test-log = "0.2.17"
